# ChangeLog for dev-libs/geoip
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.25 2004/12/29 22:16:17 ciaranm Exp $

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  16 Dec 2004; Dylan Carlson <absinthe@gentoo.org> geoip-1.3.5.ebuild,
  geoip-1.3.6.ebuild:
  Stable on amd64.

  22 Oct 2004; Jason Wever <weeve@gentoo.org> geoip-1.3.6.ebuild:
  Added ~sparc keyword.

  11 Oct 2004; Guy Martin <gmsoft@gentoo.org> geoip-1.3.6.ebuild:
  Marked stable on hppa.

  17 Aug 2004; Eldad Zack <eldad@gentoo.org> geoip-1.3.2.ebuild,
  geoip-1.3.5.ebuild:
  x86 stable

*geoip-1.3.6 (16 Aug 2004)

  16 Aug 2004; Eldad Zack <eldad@gentoo.org> -geoip-1.3.1.ebuild,
  +geoip-1.3.6.ebuild:
  Version bump

  19 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> geoip-1.3.5.ebuild:
  Added amd64 keyword, closing #57544.

  17 Jul 2004; Tom Gall <tgall@gentoo.org> geoip-1.3.2.ebuild:
  stable on ppc64, bug #55677

*geoip-1.3.5 (17 Jul 2004)

  17 Jul 2004; Eldad Zack <eldad@gentoo.org> metadata.xml,
  +geoip-1.3.5.ebuild:
  Version bump. Closes #56243.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> geoip-1.2.1.ebuild,
  geoip-1.3.0.ebuild, geoip-1.3.1.ebuild, geoip-1.3.2.ebuild:
  virtual/glibc -> virtual/libc

  26 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> geoip-1.3.0.ebuild:
  Marked stable on amd64.

  24 May 2004; Bryan Østergaard <kloeri@gentoo.org> geoip-1.3.2.ebuild:
  Keyworded ~alpha, requested in bug #51550.

*geoip-1.3.2 (21 Apr 2004)

  24 Apr 2004; Jon Hood <squinky86@gentoo.org> geoip-1.3.2.ebuild:
  version bump (#48618)

*geoip-1.3.1 (17 Apr 2004)

  17 Apr 2004; Jon Hood <squinky86@gentoo.org> geoip-1.3.1.ebuild:
  version bump

  21 Mar 2004; Michael Boman <mboman@gentoo.org> geoip-1.2.1.ebuild,
  geoip-1.3.0.ebuild:
  QA: IUSE variable was missing.

  16 Mar 2004; Michael Boman <mboman@gentoo.org> geoip-1.3.0.ebuild: