@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/geoip-1.3.6.ebuild,v 1.4 2004/12/16 10:19:17 absinthe Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/geoip-1.3.6.ebuild,v 1.5 2005/02/05 10:31:31 hansmi Exp $
 
 MY_P=${P/geoip/GeoIP}
 S=${WORKDIR}/${MY_P}
@@ -11,7 +11,7 @@ SRC_URI="http://www.maxmind.com/download/geoip/api/c/${MY_P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~alpha amd64 hppa ~sparc"
+KEYWORDS="~x86 ~alpha amd64 hppa ~sparc ~ppc"
 IUSE=""
 
 DEPEND="virtual/libc
