@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/geoip
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.25 2004/12/29 22:16:17 ciaranm Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.26 2005/02/05 10:31:31 hansmi Exp $
+
+  05 Feb 2005; Michael Hanselmann <hansmi@gentoo.org> geoip-1.3.0.ebuild,
+  geoip-1.3.6.ebuild:
+  Stable on ppc (1.3.0), added to ~ppc (1.3.6).
 
   29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
